--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,16 @@ body {
   color: #fff;
 }
 
+.buttons .disabled {
+  background-color: gray;
+  cursor: auto;
+}
+
+.buttons .enabled {
+  background-color: #7950f2;
+  color: #fff;
+}
+
 .message {
   text-align: center;
   font-size: 20px;
